# routersploit_gui

./: .gitignore  CONSOLE_INTERACTION_FIX.md  ENHANCEMENTS_SUMMARY.md  FUNCTIONALITY_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  ISSUE_RESOLUTION_SUMMARY.md  MODULES_CLICK_ISSUE_DEBUG_GUIDE.md  MODULES_SECTION_FIX_SUMMARY.md  README.md  debug_buttons.html  demo.py  demo_auto_own.py  demo_enhanced_frontend.py  main.py  pyproject.toml  requirements.txt  test_api_button.html  test_autopwn_debug.py  test_button_debug.js  test_button_fix.html  test_button_functionality.py  test_form_functionality.html  test_frontend_fixes.py
.github/workflows/: ci.yml
custom_scripts/: dlink_upnp_rce.py
routersploit_gui/: CONSOLE_FIX_SUMMARY.md  GHOSTING_EFFECT_FIX.md  __init__.py  auto_own_runner.py  config.py  console.py  console_test.html  gui.py  llm_agent.py  main.py  module_loader.py  runner.py  simple_console_test.py  test_server.py  tools.py  web_gui.py
routersploit_gui/static/: manifest.json  sw.js
routersploit_gui/static/css/: style.css
routersploit_gui/static/icons/: icon-generator.py
routersploit_gui/static/js/: app.js  console-debug.js  debug-app.js  effects.js  simple-init.js.backup  sound-generator.js
routersploit_gui/templates/: debug_test.html  index.html  login.html  register.html  setup_2fa.html  verify_2fa.html
tests/: __init__.py  test_config.py  test_module_loader.py
